base/ingress/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.192.168.2.207.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
